chore(po): remote that kde part

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "POT-Creation-Date: 2025-07-07 19:04+0300\n"
 "PO-Revision-Date: 2025-07-07 21:43+0300\n"
 "Last-Translator: Jill Fiore <contact@lumaeris.com>\n"
-"Language-Team: English <kde-i18n-doc@kde.org>\n"
+"Language-Team: Russian <contact@lumaeris.com>\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
