--- a/po/fr.po
+++ b/po/fr.po
@@ -8,16 +8,16 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bazaar\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-07 22:10+0000\n"
-"PO-Revision-Date: 2025-07-08 00:14+0200\n"
-"Last-Translator: Atom <29772841+AtomHare@users.noreply.github.com>\n"
+"POT-Creation-Date: 2025-07-08 14:12+0200\n"
+"PO-Revision-Date: 2025-07-08 15:13+0200\n"
+"Last-Translator: Léane GRASSER <leane.grasser@proton.me>\n"
 "Language-Team: French\n"
 "Language: fr\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
-"X-Generator: Gtranslator 48.0\n"
+"X-Generator: Poedit 3.6\n"
 
 #: data/io.github.kolunmi.Bazaar.desktop.in:2
 #: data/io.github.kolunmi.Bazaar.metainfo.xml.in:7 src/bz-window.blp:5
@@ -26,7 +26,8 @@ msgstr "Bazaar"
 
 #: data/io.github.kolunmi.Bazaar.desktop.in:8
 msgid "GTK;System;PackageManager;Discover;Flatpak;Software;Store;"
-msgstr "GTK;Système;GestionnaireDePaquets;Discover;Flatpak;Logiciel;Store;"
+msgstr ""
+"GTK;Système;Gestionnaire de paquets;Découvrir;Flatpak;Logiciel;Magasin;"
 
 #: data/io.github.kolunmi.Bazaar.gschema.xml:6
 msgid "Show Animated Background"
@@ -34,20 +35,18 @@ msgstr "Afficher un fond animé"
 
 #: data/io.github.kolunmi.Bazaar.gschema.xml:7
 msgid "Whether to show the animated icon background on the home page"
-msgstr "Affiche ou non l'icône animé du fond sur la page d'accueil"
+msgstr "Affichez ou non le fond animé de la page d'accueil"
 
 #. FIXME: add descriptions and summary
 #: data/io.github.kolunmi.Bazaar.metainfo.xml.in:9
 msgid "Keep the summary shorter, between 10 and 35 characters"
-msgstr "Garder le résumé court, entre 10 et 35 caractères"
+msgstr ""
+"Réduisez la description afin qu'elle soit comprise entre 10 et 35 "
+"caractères"
 
 #: data/io.github.kolunmi.Bazaar.metainfo.xml.in:11
 msgid "No description"
-msgstr "Pas de description"
-
-#: data/io.github.kolunmi.Bazaar.metainfo.xml.in:15
-msgid "Adam Masciola"
-msgstr "Adam Masciola"
+msgstr "Aucune description"
 
 #: data/io.github.kolunmi.Bazaar.metainfo.xml.in:41
 msgid "Main Bazaar window showing Blender"
@@ -56,11 +55,11 @@ msgstr "Fenêtre principale de Bazaar sur la page de Blender"
 #: src/bz-addons-dialog.blp:13 src/bz-installed-page.blp:161
 #: src/bz-installed-page.blp:173
 msgid "Manage Addons"
-msgstr "Gérer les addons"
+msgstr "Gérer les extensions"
 
 #: src/bz-app-tile.blp:65 src/bz-full-view.blp:139
 msgid "This flatpak is verified by the original developers of the software."
-msgstr "Ce flatpak est vérifié par les développeurs du logiciel."
+msgstr "Ce Flatpak est validé par les développeurs à l'origine du logiciel."
 
 #: src/bz-application.c:1050
 msgid "translator-credits"
@@ -73,19 +72,20 @@ msgstr "Vide"
 
 #: src/bz-browse-widget.blp:15
 msgid "No Curated Applications"
-msgstr "Pas d'applications recommandées"
+msgstr "Aucune application recommandée"
 
 #: src/bz-browse-widget.blp:16
 msgid ""
 "Bazaar was not provided a curated content configuration. Contact your "
 "operating system's support channels for assistance."
 msgstr ""
-"Bazaar n'a pas de configuration pour les applications recommandées. "
-"Contactez le support de votre système d'exploitation pour obtenir de l'aide."
+"Aucune configuration de contenu recommandé n'a été fournie à Bazaar. "
+"Contactez l'assistance de votre système d'exploitation pour obtenir de "
+"l'aide."
 
 #: src/bz-browse-widget.blp:22 src/bz-flathub-page.blp:11
 msgid "Browser"
-msgstr "Naviguer"
+msgstr "Navigateur"
 
 #: src/bz-error.c:45
 msgid "An Error Occurred"
@@ -105,15 +105,15 @@ msgstr "Applications de la semaine"
 
 #: src/bz-flathub-page.blp:85
 msgid "Trending"
-msgstr "Tendance"
+msgstr "Tendances"
 
 #: src/bz-flathub-page.blp:117
 msgid "Recently Updated"
-msgstr "Mises à jour"
+msgstr "Mises à jour récemment"
 
 #: src/bz-flathub-page.blp:149
 msgid "Recently Added"
-msgstr "Nouveautés"
+msgstr "Ajoutées récemment"
 
 #: src/bz-flathub-page.blp:181
 msgid "Popular"
@@ -121,11 +121,11 @@ msgstr "Populaires"
 
 #: src/bz-full-view.blp:15
 msgid "No Results"
-msgstr "Pas de résultats"
+msgstr "Aucun résultat"
 
 #: src/bz-full-view.blp:16
 msgid "Try a different search query"
-msgstr "Essayez une autre requête"
+msgstr "Essayez une autre recherche"
 
 #: src/bz-full-view.blp:22 src/bz-window.blp:42
 msgid "Content"
@@ -152,16 +152,16 @@ msgid ""
 "The number of downloads in the last 30 days. Click to view this "
 "application's download statistics."
 msgstr ""
-"Le nombre de téléchargements des 30 derniers jours. Cliquez pour voir les "
-"statistiques de téléchargement."
+"Le nombre de téléchargements lors des 30 derniers jours. Cliquez pour voir "
+"les statistiques de téléchargement de cette application."
 
 #: src/bz-full-view.blp:293
 msgid "Support this developer"
-msgstr "Supporter le développeur"
+msgstr "Soutenir ce développeur"
 
 #: src/bz-full-view.blp:306
 msgid "Support"
-msgstr "Support"
+msgstr "Soutenir"
 
 #: src/bz-full-view.blp:363
 msgid "Remote repo name"
@@ -169,7 +169,7 @@ msgstr "Nom du dépôt distant"
 
 #: src/bz-full-view.blp:376
 msgid "Project URL"
-msgstr "Site web du projet"
+msgstr "URL du projet"
 
 #: src/bz-full-view.blp:388
 msgid "Download size"
@@ -178,7 +178,7 @@ msgstr "Taille du téléchargement"
 #: src/bz-full-view.c:211
 #, c-format
 msgid "Released %x"
-msgstr "Publié le %x"
+msgstr "Publiée le %x"
 
 #: src/bz-installed-page.blp:21
 msgid "BzInstalledPage"
@@ -190,7 +190,7 @@ msgstr "Plus d'actions"
 
 #: src/bz-installed-page.blp:186 src/bz-installed-page.blp:197
 msgid "Edit Permissions"
-msgstr "Éditer les permissions"
+msgstr "Modifier les autorisations"
 
 #: src/bz-preferences-dialog.blp:9
 msgid "Preferences"
@@ -198,7 +198,7 @@ msgstr "Préférences"
 
 #: src/bz-preferences-dialog.blp:13
 msgid "How the application looks"
-msgstr "A quoi l'application ressemble"
+msgstr "Apparence de l'application"
 
 #: src/bz-preferences-dialog.blp:14
 msgid "Appearance"
@@ -206,11 +206,11 @@ msgstr "Apparence"
 
 #: src/bz-preferences-dialog.blp:17
 msgid "Show animated background"
-msgstr "Afficher le fond animé"
+msgstr "Afficher un fond animé"
 
 #: src/bz-search-widget.blp:69
 msgid "Type to filter"
-msgstr "Taper pour chercher"
+msgstr "Saisissez pour filtrer"
 
 #: src/bz-search-widget.blp:98 src/bz-search-widget.blp:115
 msgid "Search Options"
@@ -230,15 +230,17 @@ msgstr "Avancé"
 
 #: src/bz-search-widget.blp:143
 msgid "Match using regular expressions"
-msgstr "Correspondre avec des expressions régulières (regex)"
+msgstr "Utiliser les expressions régulières"
 
 #: src/bz-search-widget.blp:148
 msgid "Hide filtering and sorting behind a crossfade effect"
-msgstr "Cacher les filtres et le tri avec un effet de fondu"
+msgstr "Masquer les filtres et le tri à l'aide d'un effet de fondu enchaîné"
 
 #: src/bz-search-widget.blp:153
 msgid "Debounce input to prevent instant replies"
-msgstr "Délayer le traitement pour éviter des résultats instantanés"
+msgstr ""
+"Ajouter un délai au traitement des saisies pour éviter les résultats "
+"instantanés"
 
 #: src/bz-share-dialog.blp:13
 msgid "Share"
@@ -246,15 +248,15 @@ msgstr "Partager"
 
 #: src/bz-share-dialog.blp:64
 msgid "Copy this link"
-msgstr "Copier le lien"
+msgstr "Copier ce lien"
 
 #: src/bz-share-dialog.blp:71
 msgid "Open this link externally"
-msgstr "Ouvrir le lien"
+msgstr "Ouvrir ce lien dans une application externe"
 
 #: src/bz-stats-dialog.blp:15
 msgid "Downloads Over Time"
-msgstr "Téléchargements au fil du temps"
+msgstr "Total de téléchargements"
 
 #: src/bz-stats-dialog.blp:31
 msgid "Minimize Lower Bound"
@@ -267,7 +269,7 @@ msgstr "Maximiser la borne supérieure"
 #: src/bz-transaction-manager.c:439
 #, c-format
 msgid "Finished in %.02f seconds"
-msgstr "Fini en %.02f secondes"
+msgstr "Terminé en %.02f secondes"
 
 #: src/bz-transaction-view.blp:34
 msgid "Installing"
@@ -279,7 +281,7 @@ msgstr "Mise à jour"
 
 #: src/bz-transaction-view.blp:92
 msgid "Removing"
-msgstr "Suppresion"
+msgstr "Suppression"
 
 #: src/bz-transaction.c:268
 msgid "Pending"
@@ -302,8 +304,8 @@ msgid ""
 "The following applications are eligible for updates. Would you like to "
 "install them?"
 msgstr ""
-"Les applications suivantes possèdent des mises à jour. Souhaitez-vous "
-"lesinstaller ?"
+"Des mises à jour sont disponibles pour les applications suivantes. Voulez-"
+"vous les installer ?"
 
 #: src/bz-update-dialog.c:135
 #, c-format
@@ -311,25 +313,26 @@ msgid ""
 "%d runtimes and/or addons are eligible for updates. Would you like to "
 "install them?"
 msgstr ""
-"%d runtimes et/ou addons possèdent des mises à jour. Souhaitez-vous "
-"lesinstaller ?"
+"Des mises à jour sont disponibles pour %d environnements d'exécution et/ou "
+"extensions. Voulez-vous les installer ?"
 
 #: src/bz-update-dialog.c:143
 #, c-format
 msgid "Additionally, %d runtimes and/or addons will be updated."
-msgstr "De plus, %d runtimes et/ou addons seront mis à jour"
+msgstr ""
+"De plus, %d environnements d'exécution et/ou extensions seront mis à jour."
 
 #: src/bz-window.blp:36
 msgid "Transactions Will Appear Here"
-msgstr "Les opérations apparaitrons ici"
+msgstr "Les transactions apparaîtront ici"
 
 #: src/bz-window.blp:97
 msgid "Halt the execution of transactions"
-msgstr "Arrêter l'execution des opérations"
+msgstr "Interrompre l'exécution des transactions"
 
 #: src/bz-window.blp:105
 msgid "Clear all finished transactions"
-msgstr "Effacer toutes les opérations terminées"
+msgstr "Effacer toutes les transactions terminées"
 
 #: src/bz-window.blp:136 src/bz-window.blp:140
 msgid "Offline"
@@ -337,15 +340,15 @@ msgstr "Hors ligne"
 
 #: src/bz-window.blp:146
 msgid "Loading"
-msgstr "Chargement"
+msgstr "Chargement en cours"
 
 #: src/bz-window.blp:153
 msgid "Browse"
-msgstr "Naviguer"
+msgstr "Explorer"
 
 #: src/bz-window.blp:163
 msgid "App View"
-msgstr "Vue de l'application"
+msgstr "Vue Application"
 
 #: src/bz-window.blp:174 src/bz-window.blp:285
 msgid "Flathub"
@@ -353,15 +356,15 @@ msgstr "Flathub"
 
 #: src/bz-window.blp:184 src/bz-window.blp:306
 msgid "Installed"
-msgstr "Mes applications"
+msgstr "Installées"
 
 #: src/bz-window.blp:203
 msgid "Go Back"
-msgstr "Revenir en arrière"
+msgstr "Retour"
 
 #: src/bz-window.blp:211
 msgid "Refresh"
-msgstr "Rafraîchir"
+msgstr "Actualiser"
 
 #: src/bz-window.blp:220
 msgid "Search"
@@ -373,15 +376,15 @@ msgstr "Mettre à jour"
 
 #: src/bz-window.blp:249
 msgid "View curated applications"
-msgstr "Voir les applications "
+msgstr "Voir les applications recommandées"
 
 #: src/bz-window.blp:264
 msgid "Curated"
-msgstr "Recommandations"
+msgstr "Recommandées"
 
 #: src/bz-window.blp:270
 msgid "View the latest on Flathub"
-msgstr "Voir les nouveautés de Flathub"
+msgstr "Voir les nouveautés Flathub"
 
 #: src/bz-window.blp:291
 msgid "View installed applications"
@@ -393,7 +396,7 @@ msgstr "Menu principal"
 
 #: src/bz-window.blp:331
 msgid "Toggle transaction sidebar"
-msgstr "Afficher la barre latérale des opérations"
+msgstr "Afficher/Masquer la barre latérale des transactions"
 
 #: src/bz-window.blp:374
 msgid "_Keyboard Shortcuts"
@@ -409,7 +412,7 @@ msgstr "_Faire un don à Bazaar ❤️"
 
 #: src/bz-window.c:845
 msgid "Can't do that right now!"
-msgstr "Impossible de faire ça maintenant !"
+msgstr "Impossible de faire ceci pour le moment !"
 
 #: src/bz-window.c:858
 msgid "Confirm Action"
@@ -425,12 +428,12 @@ msgid ""
 "\n"
 "Are you sure?"
 msgstr ""
-"Vous êtes en train de supprimer ces Flatpak:\n"
+"Vous êtes sur le point de supprimer ces Flatpaks :\n"
 "\n"
 "<b>%s</b>\n"
 "<tt>%s</tt>\n"
 "\n"
-"Êtes vous sûr ?"
+"Voulez-vous vraiment continuer ?"
 
 #: src/bz-window.c:884 src/bz-window.c:904
 msgid "Cancel"
@@ -450,12 +453,12 @@ msgid ""
 "\n"
 "Are you sure?"
 msgstr ""
-"Vous êtes en train d'installer ces Flatpak :\n"
+"Vous êtes sur le point d'installer ces Flatpaks :\n"
 "\n"
 "<b>%s</b>\n"
 "<tt>%s</tt>\n"
 "\n"
-"Êtes vous sûr ?"
+"Voulez-vous vraiment continuer ?"
 
 #: src/bz-window.c:930
 msgid "More details"
@@ -463,11 +466,11 @@ msgstr "Plus de détails"
 
 #: src/bz-window.c:1055
 msgid "Resume the execution of transactions"
-msgstr "Reprendre les opérations"
+msgstr "Reprendre l'exécution des transactions"
 
 #: src/bz-window.c:1061
 msgid "Pause the execution of transactions"
-msgstr "Mettre en pause les opérations"
+msgstr "Mettre en pause l'exécution des transactions"
 
 #: src/gtk/help-overlay.blp:11
 msgctxt "shortcut window"
@@ -477,24 +480,27 @@ msgstr "Général"
 #: src/gtk/help-overlay.blp:14
 msgctxt "shortcut window"
 msgid "Open Search Dialog"
-msgstr "Ouvrir la page de recherche"
+msgstr "Ouvrir la recherche"
 
 #: src/gtk/help-overlay.blp:19
 msgctxt "shortcut window"
 msgid "Refresh"
-msgstr "Rafraîchir"
+msgstr "Actualiser"
 
 #: src/gtk/help-overlay.blp:24
 msgctxt "shortcut window"
 msgid "Toggle Transaction Manager"
-msgstr "Afficher la barre latérale des opérations"
+msgstr "Afficher/Masquer le gestionnaire de transactions"
 
 #: src/gtk/help-overlay.blp:29
 msgctxt "shortcut window"
 msgid "Show Shortcuts"
-msgstr "_Afficher les raccourcis"
+msgstr "Afficher les raccourcis"
 
 #: src/gtk/help-overlay.blp:34
 msgctxt "shortcut window"
 msgid "Quit"
 msgstr "Quitter"
+
+#~ msgid "Adam Masciola"
+#~ msgstr "Adam Masciola"
