chore(po): add shortcuts and fix some lines for ru

--- a/po/ru.po
+++ b/po/ru.po
@@ -8,10 +8,10 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bazaar\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-07 19:04+0300\n"
-"PO-Revision-Date: 2025-07-07 21:43+0300\n"
+"POT-Creation-Date: 2025-07-08 04:54+0300\n"
+"PO-Revision-Date: 2025-07-08 17:58+0300\n"
 "Last-Translator: Jill Fiore <contact@lumaeris.com>\n"
-"Language-Team: Russian <contact@lumaeris.com>\n"
+"Language-Team: Russian\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -21,7 +21,7 @@ msgstr ""
 "X-Generator: Lokalize 25.04.3\n"
 
 #: data/io.github.kolunmi.Bazaar.desktop.in:2
-#: data/io.github.kolunmi.Bazaar.metainfo.xml.in:7
+#: data/io.github.kolunmi.Bazaar.metainfo.xml.in:7 src/bz-window.blp:5
 msgid "Bazaar"
 msgstr "Bazaar"
 
@@ -81,8 +81,8 @@ msgid ""
 "Bazaar was not provided a curated content configuration. Contact your "
 "operating system's support channels for assistance."
 msgstr ""
-"Bazaar не была предоставлена конфигурация курируемых приложений. "
-"Обратитесь за помощью к поддержке вашей операционной системы."
+"Bazaar не была предоставлена конфигурация курируемых приложений. Обратитесь "
+"за помощью к поддержке вашей операционной системы."
 
 #: src/bz-browse-widget.blp:22 src/bz-flathub-page.blp:11
 msgid "Browser"
@@ -153,8 +153,8 @@ msgid ""
 "The number of downloads in the last 30 days. Click to view this "
 "application's download statistics."
 msgstr ""
-"Количество скачиваний за эти 30 дней. Нажмите, чтобы "
-"открыть статистику скачиваний приложения."
+"Количество скачиваний за эти 30 дней. Нажмите, чтобы открыть статистику "
+"скачиваний приложения."
 
 #: src/bz-full-view.blp:293
 msgid "Support this developer"
@@ -211,7 +211,7 @@ msgstr "Показать анимированный фон"
 
 #: src/bz-search-widget.blp:69
 msgid "Type to filter"
-msgstr "Введите для фильтрации"
+msgstr "Поиск"
 
 #: src/bz-search-widget.blp:98 src/bz-search-widget.blp:115
 msgid "Search Options"
@@ -303,8 +303,7 @@ msgid ""
 "The following applications are eligible for updates. Would you like to "
 "install them?"
 msgstr ""
-"Перечисленные приложения могут быть обновлены. Вы хотите "
-"установить их?"
+"Перечисленные приложения могут быть обновлены. Вы хотите установить их?"
 
 #: src/bz-update-dialog.c:135
 #, c-format
@@ -312,8 +311,8 @@ msgid ""
 "%d runtimes and/or addons are eligible for updates. Would you like to "
 "install them?"
 msgstr ""
-"%d сред выполнения и/или дополнений могут быть обновлены. Вы "
-"хотите установить их?"
+"%d сред выполнения и/или дополнений могут быть обновлены. Вы хотите "
+"установить их?"
 
 #: src/bz-update-dialog.c:143
 #, c-format
@@ -332,9 +331,9 @@ msgstr "Остановить выполнение транзакций"
 msgid "Clear all finished transactions"
 msgstr "Очистить все завершенные транзакции"
 
-#: src/bz-window.blp:136
+#: src/bz-window.blp:136 src/bz-window.blp:140
 msgid "Offline"
-msgstr "Вне сети"
+msgstr "Нет интернета"
 
 #: src/bz-window.blp:146
 msgid "Loading"
@@ -354,7 +353,7 @@ msgstr "Flathub"
 
 #: src/bz-window.blp:184 src/bz-window.blp:306
 msgid "Installed"
-msgstr "Установлено"
+msgstr "Установленное"
 
 #: src/bz-window.blp:203
 msgid "Go Back"
@@ -374,11 +373,11 @@ msgstr "Обновить"
 
 #: src/bz-window.blp:249
 msgid "View curated applications"
-msgstr "Посмотреть курируемые приложения"
+msgstr "Посмотреть избранные приложения"
 
 #: src/bz-window.blp:264
 msgid "Curated"
-msgstr "Курируемое"
+msgstr "Избранное"
 
 #: src/bz-window.blp:270
 msgid "View the latest on Flathub"
@@ -406,7 +405,7 @@ msgstr "_О Bazaar"
 
 #: src/bz-window.blp:384
 msgid "_Donate to Bazaar ❤️"
-msgstr "_Пожертвовать Bazaar ❤️"
+msgstr "_Поддержать Bazaar ❤️"
 
 #: src/bz-window.c:845
 msgid "Can't do that right now!"
@@ -469,3 +468,33 @@ msgstr "Возобновить выполнение транзакций"
 #: src/bz-window.c:1061
 msgid "Pause the execution of transactions"
 msgstr "Приостановить выполнение транзакций"
+
+#: src/gtk/help-overlay.blp:11
+msgctxt "shortcut window"
+msgid "General"
+msgstr "Общее"
+
+#: src/gtk/help-overlay.blp:14
+msgctxt "shortcut window"
+msgid "Open Search Dialog"
+msgstr "Открыть диалог поиска"
+
+#: src/gtk/help-overlay.blp:19
+msgctxt "shortcut window"
+msgid "Refresh"
+msgstr "Перезагрузить"
+
+#: src/gtk/help-overlay.blp:24
+msgctxt "shortcut window"
+msgid "Toggle Transaction Manager"
+msgstr "Переключить боковую панель транзакций"
+
+#: src/gtk/help-overlay.blp:29
+msgctxt "shortcut window"
+msgid "Show Shortcuts"
+msgstr "Открыть сочетания клавиш"
+
+#: src/gtk/help-overlay.blp:34
+msgctxt "shortcut window"
+msgid "Quit"
+msgstr "Закрыть"
