remove kde language team

--- a/po/de.po
+++ b/po/de.po
@@ -9,7 +9,7 @@ msgstr ""
 "POT-Creation-Date: 2025-07-08 03:52+0200\n"
 "PO-Revision-Date: 2025-07-08 19:58+0200\n"
 "Last-Translator: renner <renner0@posteo.de>\n"
-"Language-Team: German <kde-i18n-de@kde.org>\n"
+"Language-Team: German\n"
 "Language: de\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
