--- a/po/de.po
+++ b/po/de.po
@@ -6,8 +6,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bazaar\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-08 03:52+0200\n"
-"PO-Revision-Date: 2025-07-08 19:58+0200\n"
+"POT-Creation-Date: 2025-07-09 10:10+0200\n"
+"PO-Revision-Date: 2025-07-09 15:24+0200\n"
 "Last-Translator: renner <renner0@posteo.de>\n"
 "Language-Team: German\n"
 "Language: de\n"
@@ -22,7 +22,11 @@ msgstr ""
 msgid "Bazaar"
 msgstr "Bazaar"
 
-#: data/io.github.kolunmi.Bazaar.desktop.in:8
+#: data/io.github.kolunmi.Bazaar.desktop.in:3
+msgid "Add, remove or update flatpak software on this computer"
+msgstr "Hinzufügen, Entfernen oder Aktualisieren von Anwendungen auf diesem Computer"
+
+#: data/io.github.kolunmi.Bazaar.desktop.in:9
 msgid "GTK;System;PackageManager;Discover;Flatpak;Software;Store;"
 msgstr "GTK;System;Paketverwaltung;Discover;Flatpak;Software;Store"
 
@@ -32,7 +36,7 @@ msgstr "Animierten Hintergrund anzeigen"
 
 #: data/io.github.kolunmi.Bazaar.gschema.xml:7
 msgid "Whether to show the animated icon background on the home page"
-msgstr "Ob der animierte Symbolhintergrund auf der Startseite angezeigt werden soll"
+msgstr "Den animierten Hintergrund auf der Startseite anzeigen"
 
 #. FIXME: add descriptions and summary
 #: data/io.github.kolunmi.Bazaar.metainfo.xml.in:9
@@ -51,18 +55,18 @@ msgstr "Adam Masciola"
 msgid "Main Bazaar window showing Blender"
 msgstr "Bazaar-Hauptfenster zeigt Blender"
 
-#: src/bz-addons-dialog.blp:13 src/bz-installed-page.blp:161
-#: src/bz-installed-page.blp:173
+#: src/bz-addons-dialog.blp:13 src/bz-installed-page.blp:162
+#: src/bz-installed-page.blp:174
 msgid "Manage Addons"
 msgstr "Erweiterungen verwalten"
 
 #: src/bz-app-tile.blp:65 src/bz-full-view.blp:139
 msgid "This flatpak is verified by the original developers of the software."
-msgstr "Dieses Flatpak wurde von den ursprünglichen Entwicklern der Software verifiziert."
+msgstr "Diese Anwendung wurde von den ursprünglichen Entwicklern der Software verifiziert."
 
 #: src/bz-application.c:1050
 msgid "translator-credits"
-msgstr "renner"
+msgstr "renner,mandarinoo"
 
 #: src/bz-browse-widget.blp:11 src/bz-full-view.blp:11
 #: src/bz-installed-page.blp:11 src/bz-window.blp:32
@@ -78,8 +82,8 @@ msgid ""
 "Bazaar was not provided a curated content configuration. Contact your "
 "operating system's support channels for assistance."
 msgstr ""
-"Bazaar wurde nicht mit vorgestellten Inhalten eingerichtet. "
-"Nehme Sie Kontakt mit den Entwicklern Ihres Betriebssystems auf, um Hilfe zu erhalten."
+"Bazaar wurde nicht mit vorgestellten Inhalten eingerichtet. Nehmen Sie "
+"Kontakt mit den Entwicklern Ihres Betriebssystems auf, um Hilfe zu erhalten."
 
 #: src/bz-browse-widget.blp:22 src/bz-flathub-page.blp:11
 msgid "Browser"
@@ -103,7 +107,7 @@ msgstr "Anwendungen der Woche"
 
 #: src/bz-flathub-page.blp:85
 msgid "Trending"
-msgstr "Aktuelle Trends"
+msgstr "Im Trend"
 
 #: src/bz-flathub-page.blp:117
 msgid "Recently Updated"
@@ -133,43 +137,43 @@ msgstr "Inhalt"
 msgid "Download and install this application"
 msgstr "Diese Anwendung herunterladen und installieren"
 
-#: src/bz-full-view.blp:201 src/bz-window.c:905
+#: src/bz-full-view.blp:202 src/bz-window.c:905
 msgid "Install"
 msgstr "Installieren"
 
-#: src/bz-full-view.blp:217
+#: src/bz-full-view.blp:216
 msgid "Uninstall this application"
 msgstr "Diese Anwendung deinstallieren"
 
-#: src/bz-full-view.blp:239
+#: src/bz-full-view.blp:241
 msgid "Share this application"
 msgstr "Diese Anwendung teilen"
 
-#: src/bz-full-view.blp:251
+#: src/bz-full-view.blp:253
 msgid ""
 "The number of downloads in the last 30 days. Click to view this "
 "application's download statistics."
 msgstr ""
-"Die Anzahl der Downloads in den letzten 30 Tagen. Klicken Sie hier, "
-"um die Download-Statistiken für diese Anwendung anzuzeigen."
+"Die Anzahl der Downloads in den letzten 30 Tagen. Klicken Sie hier, um die "
+"Download-Statistiken für diese Anwendung anzuzeigen."
 
-#: src/bz-full-view.blp:293
+#: src/bz-full-view.blp:295
 msgid "Support this developer"
 msgstr "Diesen Entwickler unterstützen"
 
-#: src/bz-full-view.blp:306
+#: src/bz-full-view.blp:308
 msgid "Support"
 msgstr "Unterstützung"
 
-#: src/bz-full-view.blp:363
+#: src/bz-full-view.blp:366
 msgid "Remote repo name"
 msgstr "Repository-Namen"
 
-#: src/bz-full-view.blp:376
+#: src/bz-full-view.blp:379
 msgid "Project URL"
 msgstr "Projekt-URL"
 
-#: src/bz-full-view.blp:388
+#: src/bz-full-view.blp:391
 msgid "Download size"
 msgstr "Downloadgröße"
 
@@ -178,15 +182,39 @@ msgstr "Downloadgröße"
 msgid "Released %x"
 msgstr "Veröffentlicht %x"
 
-#: src/bz-installed-page.blp:21
-msgid "BzInstalledPage"
-msgstr ""
+#: src/bz-full-view.c:222
+msgid "No URL"
+msgstr "Keine URL"
 
-#: src/bz-installed-page.blp:142
+#: src/bz-full-view.c:230
+msgid ""
+"This application has a FLOSS license, meaning the source code can be audited "
+"for safety."
+msgstr ""
+"Diese Anwendung steht unter einer FLOSS-Lizenz, "
+"was bedeutet, dass der Quellcode auf Sicherheit geprüft werden kann."
+
+#: src/bz-full-view.c:231
+msgid ""
+"This application has a proprietary license, meaning the source code is "
+"developed privately and cannot be audited by an independent third party."
+msgstr ""
+"Diese Anwendung hat eine proprietäre Lizenz, "
+"das bedeute, dass der Quellcode privat entwickelt wird und kann nicht von einer unabhängigen dritten Partei überprüft werden."
+
+#: src/bz-installed-page.blp:15
+msgid "No Flatpaks Installed"
+msgstr "Keine Anwendungen installiert"
+
+#: src/bz-installed-page.blp:21 src/bz-window.blp:184 src/bz-window.blp:306
+msgid "Installed"
+msgstr "Installiert"
+
+#: src/bz-installed-page.blp:143
 msgid "More actions"
 msgstr "Weitere Aktionen"
 
-#: src/bz-installed-page.blp:186 src/bz-installed-page.blp:197
+#: src/bz-installed-page.blp:187 src/bz-installed-page.blp:198
 msgid "Edit Permissions"
 msgstr "Berechtigungen bearbeiten"
 
@@ -208,7 +236,7 @@ msgstr "Animierten Hintergrund anzeigen"
 
 #: src/bz-search-widget.blp:69
 msgid "Type to filter"
-msgstr "Tippen Sie"
+msgstr "Zum Filtern hier tippen"
 
 #: src/bz-search-widget.blp:98 src/bz-search-widget.blp:115
 msgid "Search Options"
@@ -262,10 +290,10 @@ msgstr "Untere Grenze verringern"
 msgid "Maximize Upper Bound"
 msgstr "Obere Grenze vergrößern"
 
-#: src/bz-transaction-manager.c:439
+#: src/bz-transaction-manager.c:451
 #, c-format
 msgid "Finished in %.02f seconds"
-msgstr "Nach %.02f Sekunden abgeschlossen"
+msgstr "In %.02f Sekunden abgeschlossen"
 
 #: src/bz-transaction-view.blp:34
 msgid "Installing"
@@ -300,7 +328,7 @@ msgid ""
 "The following applications are eligible for updates. Would you like to "
 "install them?"
 msgstr ""
-"Für die folgenden Anwendungen sind Aktualisierungen erhältlich"
+"Für die folgenden Anwendungen sind Aktualisierungen erhältlich. "
 "Möchten Sie diese installieren?"
 
 #: src/bz-update-dialog.c:135
@@ -309,7 +337,7 @@ msgid ""
 "%d runtimes and/or addons are eligible for updates. Would you like to "
 "install them?"
 msgstr ""
-"%d Laufzeitumgebungen und/oder Erweiterungen stehen für Aktualisierungen bereit."
+"%d Laufzeitumgebungen und/oder Erweiterungen haben neue Aktualisierungen erhalten. "
 "Möchten Sie diese installieren?"
 
 #: src/bz-update-dialog.c:143
@@ -349,10 +377,6 @@ msgstr "Anwendungsansicht"
 msgid "Flathub"
 msgstr "Flathub"
 
-#: src/bz-window.blp:184 src/bz-window.blp:306
-msgid "Installed"
-msgstr "Installiert"
-
 #: src/bz-window.blp:203
 msgid "Go Back"
 msgstr "Zurück"
@@ -371,7 +395,7 @@ msgstr "Aktualisieren"
 
 #: src/bz-window.blp:249
 msgid "View curated applications"
-msgstr "Vorgestellte Anwendung anzeigen"
+msgstr "Vorgestellte Anwendungen ansehen"
 
 #: src/bz-window.blp:264
 msgid "Curated"
@@ -379,7 +403,7 @@ msgstr "Vorgestellt"
 
 #: src/bz-window.blp:270
 msgid "View the latest on Flathub"
-msgstr "Das neuste auf Flathub ansehen"
+msgstr "Das neueste auf Flathub ansehen"
 
 #: src/bz-window.blp:291
 msgid "View installed applications"
@@ -391,7 +415,7 @@ msgstr "Hauptmenü"
 
 #: src/bz-window.blp:331
 msgid "Toggle transaction sidebar"
-msgstr "Seitenleiste für Transaktionen umschalten"
+msgstr "Seitenleiste für Transaktionen anzeigen"
 
 #: src/bz-window.blp:374
 msgid "_Keyboard Shortcuts"
@@ -407,7 +431,7 @@ msgstr "An Bazaar _spenden ❤️"
 
 #: src/bz-window.c:845
 msgid "Can't do that right now!"
-msgstr "Das geht jetzt nicht."
+msgstr "Das kann momentan nicht getan werden."
 
 #: src/bz-window.c:858
 msgid "Confirm Action"
@@ -423,12 +447,12 @@ msgid ""
 "\n"
 "Are you sure?"
 msgstr ""
-"Sie sind dabei, das folgende Flatpak zu entfernen:\n"
+"Sie sind dabei, die folgende Anwendung zu entfernen:\n"
 "\n"
 "<b>%s</b>\n"
 "<tt>%s</tt>\n"
 "\n"
-"Sind Sie sicher?"
+"Sind Sie sich sicher?"
 
 #: src/bz-window.c:884 src/bz-window.c:904
 msgid "Cancel"
@@ -448,22 +472,22 @@ msgid ""
 "\n"
 "Are you sure?"
 msgstr ""
-"Sie sind dabei, das folgende Flatpak zu installieren:\n"
+"Sie sind dabei, die folgende Anwendung zu installieren:\n"
 "\n"
 "<b>%s</b>\n"
 "<tt>%s</tt>\n"
 "\n"
-"Sind Sie sicher?"
+"Sind Sie sich sicher?"
 
 #: src/bz-window.c:930
 msgid "More details"
 msgstr "Weitere Details"
 
-#: src/bz-window.c:1055
+#: src/bz-window.c:1056
 msgid "Resume the execution of transactions"
 msgstr "Die Ausführung von Transaktionen fortsetzen"
 
-#: src/bz-window.c:1061
+#: src/bz-window.c:1062
 msgid "Pause the execution of transactions"
 msgstr "Die Ausführung von Transaktionen pausieren"
 
