--- a/po/fr.po
+++ b/po/fr.po
@@ -8,8 +8,8 @@ msgid ""
 msgstr ""
 "Project-Id-Version: bazaar\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2025-07-08 14:12+0200\n"
-"PO-Revision-Date: 2025-07-08 15:13+0200\n"
+"POT-Creation-Date: 2025-07-11 10:22+0200\n"
+"PO-Revision-Date: 2025-07-11 10:29+0200\n"
 "Last-Translator: Léane GRASSER <leane.grasser@proton.me>\n"
 "Language-Team: French\n"
 "Language: fr\n"
@@ -24,10 +24,16 @@ msgstr ""
 msgid "Bazaar"
 msgstr "Bazaar"
 
-#: data/io.github.kolunmi.Bazaar.desktop.in:8
+#: data/io.github.kolunmi.Bazaar.desktop.in:3
+msgid "Add, remove or update flatpak software on this computer"
+msgstr ""
+"Ajoutez, supprimez ou mettez à jour les logiciels Flatpak sur cet ordinateur"
+
+#: data/io.github.kolunmi.Bazaar.desktop.in:9
 msgid "GTK;System;PackageManager;Discover;Flatpak;Software;Store;"
 msgstr ""
-"GTK;Système;Gestionnaire de paquets;Découvrir;Flatpak;Logiciel;Magasin;"
+"GTK;Système;Gestionnaire de "
+"paquets;Discover;Découvrir;Flatpak;Software;Logiciel;Magasin;"
 
 #: data/io.github.kolunmi.Bazaar.gschema.xml:6
 msgid "Show Animated Background"
@@ -41,8 +47,7 @@ msgstr "Affichez ou non le fond animé de la page d'accueil"
 #: data/io.github.kolunmi.Bazaar.metainfo.xml.in:9
 msgid "Keep the summary shorter, between 10 and 35 characters"
 msgstr ""
-"Réduisez la description afin qu'elle soit comprise entre 10 et 35 "
-"caractères"
+"Réduisez la description afin qu'elle soit comprise entre 10 et 35 caractères"
 
 #: data/io.github.kolunmi.Bazaar.metainfo.xml.in:11
 msgid "No description"
@@ -52,8 +57,8 @@ msgstr "Aucune description"
 msgid "Main Bazaar window showing Blender"
 msgstr "Fenêtre principale de Bazaar sur la page de Blender"
 
-#: src/bz-addons-dialog.blp:13 src/bz-installed-page.blp:161
-#: src/bz-installed-page.blp:173
+#: src/bz-addons-dialog.blp:13 src/bz-installed-page.blp:162
+#: src/bz-installed-page.blp:174
 msgid "Manage Addons"
 msgstr "Gérer les extensions"
 
@@ -61,9 +66,59 @@ msgstr "Gérer les extensions"
 msgid "This flatpak is verified by the original developers of the software."
 msgstr "Ce Flatpak est validé par les développeurs à l'origine du logiciel."
 
-#: src/bz-application.c:1050
-msgid "translator-credits"
-msgstr "translator-credits"
+#: src/bz-application.c:1164
+msgctxt "About Dialog Developer Credit"
+msgid "Adam Masciola <kolunmi@posteo.net>"
+msgstr "Adam Masciola <kolunmi@posteo.net>"
+
+#: src/bz-application.c:1169
+msgctxt "About Dialog Translator Credit"
+msgid "Ahmed Najmawi"
+msgstr "Ahmed Najmawi"
+
+#: src/bz-application.c:1170
+msgctxt "About Dialog Translator Credit"
+msgid "AtomHare"
+msgstr "AtomHare"
+
+#: src/bz-application.c:1171
+msgctxt "About Dialog Translator Credit"
+msgid "Jill Fiore"
+msgstr "Jill Fiore"
+
+#: src/bz-application.c:1172
+msgctxt "About Dialog Translator Credit"
+msgid "Lucosec"
+msgstr "Lucosec"
+
+#: src/bz-application.c:1173
+msgctxt "About Dialog Translator Credit"
+msgid "Shihfu Juan"
+msgstr "Shihfu Juan"
+
+#: src/bz-application.c:1174
+msgctxt "About Dialog Translator Credit"
+msgid "Vlastimil Dědek"
+msgstr "Vlastimil Dědek"
+
+#: src/bz-application.c:1175
+msgctxt "About Dialog Translator Credit"
+msgid "asen23"
+msgstr "asen23"
+
+#: src/bz-application.c:1176
+msgctxt "About Dialog Translator Credit"
+msgid "renner"
+msgstr "renner"
+
+#: src/bz-application.c:1177
+msgctxt "About Dialog Translator Credit"
+msgid "robotta"
+msgstr "robotta"
+
+#: src/bz-application.c:1193
+msgid "Adam Masciola"
+msgstr "Adam Masciola"
 
 #: src/bz-browse-widget.blp:11 src/bz-full-view.blp:11
 #: src/bz-installed-page.blp:11 src/bz-window.blp:32
@@ -131,23 +186,27 @@ msgstr "Essayez une autre recherche"
 msgid "Content"
 msgstr "Contenu"
 
-#: src/bz-full-view.blp:184
+#: src/bz-full-view.blp:180
+msgid "Run this application"
+msgstr "Exécuter cette application"
+
+#: src/bz-full-view.blp:204
 msgid "Download and install this application"
 msgstr "Télécharger et installer cette application"
 
-#: src/bz-full-view.blp:201 src/bz-window.c:905
+#: src/bz-full-view.blp:222 src/bz-window.c:944
 msgid "Install"
 msgstr "Installer"
 
-#: src/bz-full-view.blp:217
+#: src/bz-full-view.blp:236
 msgid "Uninstall this application"
 msgstr "Désinstaller cette application"
 
-#: src/bz-full-view.blp:239
+#: src/bz-full-view.blp:262
 msgid "Share this application"
 msgstr "Partager cette application"
 
-#: src/bz-full-view.blp:251
+#: src/bz-full-view.blp:274
 msgid ""
 "The number of downloads in the last 30 days. Click to view this "
 "application's download statistics."
@@ -155,40 +214,64 @@ msgstr ""
 "Le nombre de téléchargements lors des 30 derniers jours. Cliquez pour voir "
 "les statistiques de téléchargement de cette application."
 
-#: src/bz-full-view.blp:293
+#: src/bz-full-view.blp:316
 msgid "Support this developer"
 msgstr "Soutenir ce développeur"
 
-#: src/bz-full-view.blp:306
+#: src/bz-full-view.blp:329
 msgid "Support"
 msgstr "Soutenir"
 
-#: src/bz-full-view.blp:363
+#: src/bz-full-view.blp:387
 msgid "Remote repo name"
 msgstr "Nom du dépôt distant"
 
-#: src/bz-full-view.blp:376
+#: src/bz-full-view.blp:400
 msgid "Project URL"
 msgstr "URL du projet"
 
-#: src/bz-full-view.blp:388
+#: src/bz-full-view.blp:412
 msgid "Download size"
 msgstr "Taille du téléchargement"
 
-#: src/bz-full-view.c:211
+#: src/bz-full-view.c:213
 #, c-format
 msgid "Released %x"
 msgstr "Publiée le %x"
 
-#: src/bz-installed-page.blp:21
-msgid "BzInstalledPage"
-msgstr "BzInstalledPage"
+#: src/bz-full-view.c:224
+msgid "No URL"
+msgstr "Aucune URL"
 
-#: src/bz-installed-page.blp:142
+#: src/bz-full-view.c:232
+msgid ""
+"This application has a FLOSS license, meaning the source code can be audited "
+"for safety."
+msgstr ""
+"Cette application est soumise à une licence FLOSS, la fiabilité de son code "
+"source peut donc être auditée."
+
+#: src/bz-full-view.c:233
+msgid ""
+"This application has a proprietary license, meaning the source code is "
+"developed privately and cannot be audited by an independent third party."
+msgstr ""
+"Cette application est soumise à une licence propriétaire, son code source "
+"est donc privé et ne peut pas être audité par un tiers indépendant."
+
+#: src/bz-installed-page.blp:15
+msgid "No Flatpaks Installed"
+msgstr "Aucun Flatpak installé"
+
+#: src/bz-installed-page.blp:21 src/bz-window.blp:201 src/bz-window.blp:323
+msgid "Installed"
+msgstr "Installées"
+
+#: src/bz-installed-page.blp:143
 msgid "More actions"
 msgstr "Plus d'actions"
 
-#: src/bz-installed-page.blp:186 src/bz-installed-page.blp:197
+#: src/bz-installed-page.blp:187 src/bz-installed-page.blp:198
 msgid "Edit Permissions"
 msgstr "Modifier les autorisations"
 
@@ -266,7 +349,7 @@ msgstr "Minimiser la borne inférieure"
 msgid "Maximize Upper Bound"
 msgstr "Maximiser la borne supérieure"
 
-#: src/bz-transaction-manager.c:439
+#: src/bz-transaction-manager.c:451
 #, c-format
 msgid "Finished in %.02f seconds"
 msgstr "Terminé en %.02f secondes"
@@ -324,15 +407,15 @@ msgstr ""
 
 #: src/bz-window.blp:36
 msgid "Transactions Will Appear Here"
-msgstr "Les transactions apparaîtront ici"
+msgstr "Les opérations apparaîtront ici"
 
 #: src/bz-window.blp:97
 msgid "Halt the execution of transactions"
-msgstr "Interrompre l'exécution des transactions"
+msgstr "Interrompre l'exécution des opérations"
 
 #: src/bz-window.blp:105
 msgid "Clear all finished transactions"
-msgstr "Effacer toutes les transactions terminées"
+msgstr "Effacer toutes les opérations terminées"
 
 #: src/bz-window.blp:136 src/bz-window.blp:140
 msgid "Offline"
@@ -342,83 +425,95 @@ msgstr "Hors ligne"
 msgid "Loading"
 msgstr "Chargement en cours"
 
-#: src/bz-window.blp:153
+#: src/bz-window.blp:170
 msgid "Browse"
 msgstr "Explorer"
 
-#: src/bz-window.blp:163
+#: src/bz-window.blp:180
 msgid "App View"
 msgstr "Vue Application"
 
-#: src/bz-window.blp:174 src/bz-window.blp:285
+#: src/bz-window.blp:191 src/bz-window.blp:302
 msgid "Flathub"
 msgstr "Flathub"
 
-#: src/bz-window.blp:184 src/bz-window.blp:306
-msgid "Installed"
-msgstr "Installées"
-
-#: src/bz-window.blp:203
+#: src/bz-window.blp:220
 msgid "Go Back"
 msgstr "Retour"
 
-#: src/bz-window.blp:211
+#: src/bz-window.blp:228
 msgid "Refresh"
 msgstr "Actualiser"
 
-#: src/bz-window.blp:220
+#: src/bz-window.blp:237
 msgid "Search"
 msgstr "Rechercher"
 
-#: src/bz-window.blp:232
+#: src/bz-window.blp:249
 msgid "Update"
 msgstr "Mettre à jour"
 
-#: src/bz-window.blp:249
+#: src/bz-window.blp:266
 msgid "View curated applications"
 msgstr "Voir les applications recommandées"
 
-#: src/bz-window.blp:264
+#: src/bz-window.blp:281
 msgid "Curated"
 msgstr "Recommandées"
 
-#: src/bz-window.blp:270
+#: src/bz-window.blp:287
 msgid "View the latest on Flathub"
 msgstr "Voir les nouveautés Flathub"
 
-#: src/bz-window.blp:291
+#: src/bz-window.blp:308
 msgid "View installed applications"
 msgstr "Voir les applications installées"
 
-#: src/bz-window.blp:320
+#: src/bz-window.blp:337
 msgid "Main Menu"
 msgstr "Menu principal"
 
-#: src/bz-window.blp:331
+#: src/bz-window.blp:348
 msgid "Toggle transaction sidebar"
-msgstr "Afficher/Masquer la barre latérale des transactions"
+msgstr "Afficher/Masquer la barre latérale des opérations"
 
-#: src/bz-window.blp:374
+#: src/bz-window.blp:392
 msgid "_Keyboard Shortcuts"
 msgstr "_Raccourcis clavier"
 
-#: src/bz-window.blp:379
+#: src/bz-window.blp:397
 msgid "_About Bazaar"
 msgstr "_À propos de Bazaar"
 
-#: src/bz-window.blp:384
+#: src/bz-window.blp:402
 msgid "_Donate to Bazaar ❤️"
 msgstr "_Faire un don à Bazaar ❤️"
 
-#: src/bz-window.c:845
+#: src/bz-window.c:813
+msgid ""
+"The ability to inspect and install local .flatpak bundle files is coming "
+"soon! In the meantime, try running\n"
+"\n"
+"flatpak install --bundle your-bundle.flatpak\n"
+"\n"
+"on the command line."
+msgstr ""
+"Les fonctionnalités d'inspection et d'installation de fichiers .flatpak de "
+"lot arrive bientôt ! En attendant, exécutez\n"
+"\n"
+"flatpak install --bundle votre-lot.flatpak\n"
+"\n"
+"en ligne de commande."
+
+#: src/bz-window.c:884
 msgid "Can't do that right now!"
 msgstr "Impossible de faire ceci pour le moment !"
 
-#: src/bz-window.c:858
+#: src/bz-window.c:897
 msgid "Confirm Action"
 msgstr "Confirmer l'action"
 
-#: src/bz-window.c:876
+#: src/bz-window.c:915
 #, c-format
 msgid ""
 "You are about to remove the following Flatpak:\n"
@@ -435,15 +530,15 @@ msgstr ""
 "\n"
 "Voulez-vous vraiment continuer ?"
 
-#: src/bz-window.c:884 src/bz-window.c:904
+#: src/bz-window.c:923 src/bz-window.c:943
 msgid "Cancel"
 msgstr "Annuler"
 
-#: src/bz-window.c:885
+#: src/bz-window.c:924
 msgid "Remove"
 msgstr "Supprimer"
 
-#: src/bz-window.c:896
+#: src/bz-window.c:935
 #, c-format
 msgid ""
 "You are about to install the following Flatpak:\n"
@@ -460,17 +555,17 @@ msgstr ""
 "\n"
 "Voulez-vous vraiment continuer ?"
 
-#: src/bz-window.c:930
+#: src/bz-window.c:969
 msgid "More details"
 msgstr "Plus de détails"
 
-#: src/bz-window.c:1055
+#: src/bz-window.c:1095
 msgid "Resume the execution of transactions"
-msgstr "Reprendre l'exécution des transactions"
+msgstr "Reprendre l'exécution des opérations"
 
-#: src/bz-window.c:1061
+#: src/bz-window.c:1101
 msgid "Pause the execution of transactions"
-msgstr "Mettre en pause l'exécution des transactions"
+msgstr "Mettre en pause l'exécution des opérations"
 
 #: src/gtk/help-overlay.blp:11
 msgctxt "shortcut window"
@@ -490,7 +585,7 @@ msgstr "Actualiser"
 #: src/gtk/help-overlay.blp:24
 msgctxt "shortcut window"
 msgid "Toggle Transaction Manager"
-msgstr "Afficher/Masquer le gestionnaire de transactions"
+msgstr "Afficher/Masquer le gestionnaire d'opérations"
 
 #: src/gtk/help-overlay.blp:29
 msgctxt "shortcut window"
@@ -502,5 +597,8 @@ msgctxt "shortcut window"
 msgid "Quit"
 msgstr "Quitter"
 
-#~ msgid "Adam Masciola"
-#~ msgstr "Adam Masciola"
+#~ msgid "translator-credits"
+#~ msgstr "translator-credits"
+
+#~ msgid "BzInstalledPage"
+#~ msgstr "BzInstalledPage"
