--- a/TODO.org
+++ b/TODO.org
@@ -1,6 +1,6 @@
 #+title: Bazaar TODOs
 
 * TODO Allow installed entry management when not connected to the internet
-* TODO Hide curated page if no configs were readable/valid
+* DONE Hide curated page if no configs were readable/valid
 * TODO Reduce memory usage
 * TODO Fix erroneous search results
