--- a/po/ja.po
+++ b/po/ja.po
@@ -8,7 +8,7 @@ msgstr ""
 "Project-Id-Version: bazaar\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2025-09-18 21:19+0900\n"
-"PO-Revision-Date: 2025-09-19 19:19+0900\n"
+"PO-Revision-Date: 2025-09-21 18:03+0900\n"
 "Last-Translator: Automatically generated\n"
 "Language-Team: none\n"
 "Language: ja\n"
@@ -59,6 +59,9 @@ msgid ""
 "Bazaar features a \"curated\" tab that can be configured by distributors to "
 "allow for a more locallized experience."
 msgstr ""
+"Linux のデスクトップを開発している開発者たちを支援することは重要です。Bazaar "
+"ではディストリビューターが管理できる「特選アプリ」タブによってユーザーの体験"
+"を最適化することを可能にします。"
 
 #: data/io.github.kolunmi.Bazaar.metainfo.xml.in:49
 msgid "The home view displaying flathub apps and categories"
@@ -224,27 +227,27 @@ msgstr ""
 #: src/bz-application.c:1326
 #, c-format
 msgid "Beginning remote entry retrieval while referencing %d blocklist(s)..."
-msgstr ""
+msgstr "%d 件のブロックリストを参照しながらリモートのエントリの取得開始中..."
 
 #: src/bz-application.c:1474
 #, c-format
 msgid "Receiving Entries"
-msgstr ""
+msgstr "エントリを受信中"
 
 #: src/bz-application.c:1475
 #, c-format
 msgid "%'d of %'d"
-msgstr ""
+msgstr "%'d / %'d"
 
 #: src/bz-application.c:1483
 #, c-format
 msgid "Waiting for background indexing tasks to catch up..."
-msgstr ""
+msgstr "バックグラウンドのインデックス処理が終了するのを待っています..."
 
 #: src/bz-application.c:1519
 #, c-format
 msgid "Completed initialization in %0.2f seconds"
-msgstr ""
+msgstr "%0.2f で初期化を完了しました"
 
 #: src/bz-browse-widget.blp:11 src/bz-flathub-page.blp:11
 #: src/bz-full-view.blp:10 src/bz-installed-page.blp:11 src/bz-window.blp:52
@@ -253,13 +256,15 @@ msgstr "空"
 
 #: src/bz-browse-widget.blp:15
 msgid "No Curated Applications"
-msgstr ""
+msgstr "特選のアプリケーションがありません"
 
 #: src/bz-browse-widget.blp:16
 msgid ""
 "Bazaar was not provided a curated content configuration. Contact your "
 "operating system's support channels for assistance."
 msgstr ""
+"Bazaar が読み込める特選アプリの情報がありませんでした。あなたが使用している "
+"OS のサポートチャンネルに連絡してください。"
 
 #: src/bz-browse-widget.blp:22 src/bz-flathub-page.blp:22
 msgid "Browser"
@@ -414,12 +419,12 @@ msgstr "連絡先"
 #: src/bz-flatpak-entry.c:584
 msgctxt "Project URL Type"
 msgid "VCS Browser"
-msgstr ""
+msgstr "VCS ブラウザー"
 
 #: src/bz-flatpak-entry.c:589
 msgctxt "Project URL Type"
 msgid "Contribute"
-msgstr ""
+msgstr "貢献する"
 
 #: src/bz-full-view.blp:14
 msgid "No Results"
@@ -447,7 +452,7 @@ msgstr "アプリケーションを実行"
 
 #: src/bz-full-view.blp:225
 msgid "Download & Install Application"
-msgstr ""
+msgstr "アプリケーションをダウンロードしてインストールする"
 
 #: src/bz-full-view.blp:231 src/bz-transaction-view.blp:98 src/bz-window.c:988
 msgid "Install"
@@ -459,7 +464,7 @@ msgstr "このアプリケーションをアンインストール"
 
 #: src/bz-full-view.blp:260
 msgid "Install Other Version"
-msgstr ""
+msgstr "ほかのバージョンをインストール"
 
 #: src/bz-full-view.blp:285
 msgid "Share this application"
@@ -546,7 +551,7 @@ msgstr "有効なブラックリスト"
 
 #: src/bz-inspector.blp:44
 msgid "Active Curated-Configs"
-msgstr ""
+msgstr "有効な特選アプリの設定"
 
 #: src/bz-inspector.blp:66
 msgid "All Entry Groups"
@@ -635,7 +640,7 @@ msgstr ""
 
 #: src/bz-search-widget.blp:69
 msgid "Type to filter"
-msgstr ""
+msgstr "入力して検索"
 
 #: src/bz-search-widget.blp:91 src/bz-search-widget.blp:108
 msgid "Search Options"
@@ -675,11 +680,11 @@ msgstr "ダウンロード数の推移"
 
 #: src/bz-stats-dialog.blp:31
 msgid "Minimize Lower Bound"
-msgstr ""
+msgstr "グラフの下限を最小化"
 
 #: src/bz-stats-dialog.blp:36
 msgid "Maximize Upper Bound"
-msgstr ""
+msgstr "グラフの上限を最大化"
 
 #: src/bz-transaction-manager.c:1090
 #, c-format
@@ -717,7 +722,7 @@ msgstr ""
 
 #: src/bz-update-dialog.blp:7
 msgid "Install Now"
-msgstr ""
+msgstr "今すぐインストール"
 
 #: src/bz-update-dialog.blp:10
 msgid "Updates Are Available"
@@ -771,7 +776,7 @@ msgstr ""
 
 #: src/bz-window.blp:221
 msgid "App View"
-msgstr ""
+msgstr "アプリ表示"
 
 #: src/bz-window.blp:233 src/bz-window.blp:364
 msgid "Flathub"
@@ -791,11 +796,11 @@ msgstr "更新を確認中"
 
 #: src/bz-window.blp:327
 msgid "View curated applications"
-msgstr ""
+msgstr "厳選されたアプリケーションを表示する"
 
 #: src/bz-window.blp:343
 msgid "Curated"
-msgstr ""
+msgstr "特選アプリ"
 
 #: src/bz-window.blp:349
 msgid "View the latest on Flathub"
@@ -846,14 +851,20 @@ msgid ""
 "\n"
 "on the command line."
 msgstr ""
+"ローカルの flatpak バンドルファイルを表示、インストールする機能は近日追加予定"
+"です! しばらくの間は代わりに、\n"
+"\n"
+"flatpak install --bundle バンドルファイル名.flatpak\n"
+"\n"
+"をコマンドラインで実行してください。"
 
 #: src/bz-window.c:877
 msgid "Can't do that right now!"
-msgstr ""
+msgstr "今すぐにはできません!"
 
 #: src/bz-window.c:932
 msgid "Confirm Action"
-msgstr ""
+msgstr "操作の確認"
 
 #: src/bz-window.c:961
 #, c-format
